--- a/.ideavimrc
+++ b/.ideavimrc
@@ -13,13 +13,16 @@ map <leader><S-\> <Action>(SplitVertically)
 map <leader>-     <Action>(SplitHorizontally)
 map <C-h>         <Action>(NextSplitter)
 map <C-l>         <Action>(PrevSplitter)
+map <leader>wd    <Action>(Unsplit)
 map gr            <Action>(FindUsages)
 map gh            <Action>(ShowHoverInfo)
+map gI            <Action>(GotoImplementation)
 map <leader>bd    <Action>(CloseContent)
 map <leader>bad   <Action>(CloseAllEditors)
 map <leader>ca    <Action>(ShowIntentionActions)
 map <leader>cg    <Action>(Generate)
 map <leader>cf    <Action>(ReformatCode)
+map <leader>cr    <Action>(RenameElement)
 map <leader>e     <Action>(ActivateProjectToolWindow)
 map <leader>ff    <Action>(GotoFile)
 map <leader>fr    <Action>(RecentFiles)
@@ -30,6 +33,12 @@ map <leader>gs    <Action>(Vcs.Show.Local.Changes)
 map <leader>sd    <Action>(ActivateProblemsViewToolWindow)
 map <leader>sg    <Action>(FindInPath)
 map <leader>ss    <Action>(FileStructurePopup)
+map [e            <Action>(GotoPreviousError)
+map ]e            <Action>(GotoNextError)
+map [f            <Action>(MethodUp)
+map ]f            <Action>(MethodDown)
+map ]h            <Action>(VcsShowNextChangeMarker)
+map [h            <Action>(VcsShowPrevChangeMarker)
 
 " Unfortunately this won't work:
 "map <C-n> <Action>(EditorDown)
