--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,29 +12,18 @@ set -g set-clipboard on          # use system clipboard
 set -g status-position top       # macOS / darwin style
 set -g default-terminal "${TERM}"
 setw -g mode-keys vi
-set -g pane-active-border-style 'fg=magenta,bg=default'
-set -g pane-border-style 'fg=brightblack,bg=default'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'dracula/tmux'
 
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-set -g @catppuccin_status_modules_right "directory"
-set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @dracula-plugins "cpu-usage ram-usage"
+set -g @dracula-ram-usage-colors "orange dark_gray"
+set -g @dracula-cpu-usage-colors "light_purple dark_gray"
+set -g @dracula-show-flags true
+set -g @dracula-tmux-ram-usage-label "MEM"
+set -g @dracula-border-contrast true
+
 
 run '~/.config/tmux/plugins/tpm/tpm'
