--- a/.ideavimrc
+++ b/.ideavimrc
@@ -9,8 +9,8 @@ Plug 'tpope/vim-surround'
 map <Esc>         <Action>(HideActiveWindow)
 map <S-l>         <Action>(NextTab)
 map <S-h>         <Action>(PreviousTab)
-map <leader><S-\> <Action>(SplitVertically)
-map <leader>-     <Action>(SplitHorizontally)
+map <leader>wv    <Action>(SplitVertically)
+map <leader>ws    <Action>(SplitHorizontally)
 map <C-h>         <Action>(NextSplitter)
 map <C-l>         <Action>(PrevSplitter)
 map <leader>wd    <Action>(Unsplit)
