--- a/alacritty.toml
+++ b/alacritty.toml
@@ -43,7 +43,7 @@ print_events = false
 render_timer = false
 
 [env]
-term = "xterm-256color"
+TERM = "xterm-256color"
 
 [font]
 size = 14.0
@@ -367,10 +367,6 @@ hide_when_typing = true
 [[mouse.bindings]]
 action = "PasteSelection"
 mouse = "Middle"
-
-[scrolling]
-history = 0
-multiplier = 3
 
 [selection]
 save_to_clipboard = true
