--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,20 +10,19 @@ set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
 set -g status-position top       # macOS / darwin style
+set -g status-interval 5
+set -g status-style bg=default
+set -g status-right "%d %b %H:%M"
+set -g status-left ""
 set -g default-terminal "${TERM}"
 setw -g mode-keys vi
+
+# visual notification of activity in other windows
+setw -g monitor-activity on
+set -g visual-activity on
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'dracula/tmux'
-
-set -g @dracula-plugins "cpu-usage ram-usage"
-set -g @dracula-ram-usage-colors "orange dark_gray"
-set -g @dracula-cpu-usage-colors "light_purple dark_gray"
-set -g @dracula-show-flags true
-set -g @dracula-tmux-ram-usage-label "MEM"
-set -g @dracula-border-contrast true
-
 
 run '~/.config/tmux/plugins/tpm/tpm'
