change tmux window status format

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,17 +9,17 @@ set -g escape-time 0             # zero-out escape time delay
 set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
-set -g status-position top       # macOS / darwin style
-set -g status-interval 5
-set -g status-style bg=default
-set -g status-right "%d %b %H:%M"
-set -g status-left ""
 set -g default-terminal "${TERM}"
 setw -g mode-keys vi
 
-# visual notification of activity in other windows
-setw -g monitor-activity on
-set -g visual-activity on
+set -g status-position top
+set -g status-interval 5
+set -g status-style bg=terminal
+set -g status-left ""
+set -g status-right "%d %b %H:%M"
+set-window-option -g window-status-current-format ' #I #W '
+set-window-option -g window-status-format '#I #W'
+set-window-option -g window-status-current-style "bg=white,fg=black,bright"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
