--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,7 +1,29 @@
 live_config_reload = true
 
-[colors]
-draw_bold_text_with_bright_colors = false
+# iTerm 2 default theme
+[colors.primary]
+background = '#101421'
+foreground = '#fffbf6'
+
+[colors.normal]
+black   = '#2e2e2e'
+red     = '#eb4129'
+green   = '#abe047'
+yellow  = '#f6c744'
+blue    = '#47a0f3'
+magenta = '#7b5cb0'
+cyan    = '#64dbed'
+white   = '#e5e9f0'
+
+[colors.bright]
+black   = '#565656'
+red     = '#ec5357'
+green   = '#c0e17d'
+yellow  = '#f9da6a'
+blue    = '#49a4f8'
+magenta = '#a47de9'
+cyan    = '#99faf2'
+white   = '#ffffff'
 
 [env]
 TERM = "xterm-256color"
@@ -9,17 +31,14 @@ TERM = "xterm-256color"
 [font]
 size = 14.0
 
+[font.normal]
+family = "JetBrainsMono Nerd Font"
+
 [font.bold]
-family = "JetBrains Mono"
-style = "Bold"
+family = "JetBrainsMono Nerd Font"
 
 [font.italic]
-family = "JetBrains Mono"
-style = "Light Italic"
-
-[font.normal]
-family = "JetBrains Mono"
-style = "Regular"
+family = "JetBrainsMono Nerd Font"
 
 [[keyboard.bindings]]
 action = "ToggleFullScreen"
@@ -32,9 +51,6 @@ hide_when_typing = true
 [selection]
 save_to_clipboard = true
 
-[shell]
-program = "/usr/bin/zsh"
-
 [window]
 opacity = 0.95
 startup_mode = "Fullscreen"
@@ -42,3 +58,4 @@ startup_mode = "Fullscreen"
 [window.dimensions]
 columns = 130
 lines = 25
+
