--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,12 +13,12 @@ set -g default-terminal "${TERM}"
 setw -g mode-keys vi
 
 set -g status-position top
-set -g status-interval 5
 set -g status-style bg=terminal
+set -g status-justify centre
 set -g status-left ""
-set -g status-right "%d %b %H:%M"
-set-window-option -g window-status-current-format ' #I #W '
-set-window-option -g window-status-format '#I #W'
+set -g status-right "#[fg=black,bg=yellow,bright] #S "
+set-window-option -g window-status-current-format " #I #W "
+set-window-option -g window-status-format "#I #W"
 set-window-option -g window-status-current-style "bg=white,fg=black,bright"
 
 set -g @plugin 'tmux-plugins/tpm'
