add tmuxifier plugin

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,5 +24,6 @@ set-window-option -g window-status-current-style "bg=white,fg=black,bright"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'jimeh/tmuxifier'
 
 run '~/.config/tmux/plugins/tpm/tpm'
